// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@input: matches snapshot * appearance * icon 1`] = `
<Wrapper
  forwardedRef={null}
  icon={[Function]}
/>
`;

exports[`@input: matches snapshot * appearance * label + caption 1`] = `
<Wrapper
  caption="Caption Text"
  captionIcon={[Function]}
  forwardedRef={null}
  label="Label"
/>
`;

exports[`@input: matches snapshot * appearance * text styled 1`] = `
<Wrapper
  caption="Caption Text"
  captionIcon={[Function]}
  captionTextStyle={
    Object {
      "fontFamily": "opensans-bold",
      "letterSpacing": 8,
    }
  }
  forwardedRef={null}
  label="Label"
  labelStyle={
    Object {
      "color": "blue",
    }
  }
  textStyle={
    Object {
      "fontSize": 24,
      "lineHeight": 26,
    }
  }
/>
`;

exports[`@input: matches snapshot * interaction * stateless 1`] = `
<Wrapper
  forwardedRef={null}
/>
`;
